# langchain-agentkit

./: .dockerignore  CHANGELOG.md  CLAUDE.md  README-skillkit.md  README.md  pyproject-skillkit.toml  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: custom_state_type.py  delegation.py  filesystem.py  manual_wiring.py  multi_agent.py  root_with_checkpointer.py  shared_filesystem.py  standalone_node.py  subgraph_with_checkpointer.py  tasks.py  team.py  web_search.py
examples/agentfs/: README.md  agent.py
examples/agentfs/.agentkit/: AGENTS.md
examples/bubblewrap/: README.md  agent.py
examples/bubblewrap/.agentkit/: AGENTS.md
examples/daytona/: README.md  agent.py
examples/daytona/.agentkit/: AGENTS.md
examples/mirage/: README.md  agent.py
examples/mirage/.agentkit/: AGENTS.md
examples/mirage/.agentkit/agents/: reviewer.md
scripts/: build-skillkit-redirect.sh  changelog-entry.sh  test-in-docker.sh
src/langchain_agentkit/: __init__.py  _graph_builder.py  _handler_validation.py  agent.py  agent_kit.py  backend.py  composability.py  extension.py  filesystem_middleware.py  filesystem_tools.py  frontmatter.py  graph_builder.py  hitl_middleware.py  hook_runner.py  hooks.py  middleware.py  node.py  prompt_composition.py  reminders.py  runtime.py  skill_kit.py  skill_registry.py  skills_middleware.py  state.py  streaming.py  task_tools.py  tasks_middleware.py  types.py  validate.py  virtual_filesystem.py  web_search_middleware.py
src/langchain_agentkit/backends/: __init__.py  _execution.py  agentfs.py  base.py  bubblewrap.py  daytona.py  execution.py  helpers.py  mirage.py  os.py  protocol.py  results.py
src/langchain_agentkit/core/: __init__.py  model_metadata.py  model_registry.py
src/langchain_agentkit/extensions/: __init__.py  agents.py  discovery.py  filesystem.py  hitl.py  skills.py  tasks.py  teams.py  web_search.py
src/langchain_agentkit/extensions/agents/: __init__.py  discovery.py  extension.py  filter.py  output.py  prompt.md  refs.py  tools.py  types.py
src/langchain_agentkit/extensions/context_compaction/: __init__.py  cutpoint.py  extension.py  file_ops.py  summarizer.py  token_accounting.py
src/langchain_agentkit/extensions/core_behavior/: __init__.py  extension.py
src/langchain_agentkit/extensions/env/: __init__.py  extension.py
src/langchain_agentkit/extensions/filesystem/: __init__.py  extension.py  tools.py
src/langchain_agentkit/extensions/history/: __init__.py  _file_ops.py  _summarizer.py  _token_accounting.py  compaction.py  extension.py  state.py  strategies.py
src/langchain_agentkit/extensions/hitl/: __init__.py  extension.py  tools.py  types.py
src/langchain_agentkit/extensions/memory/: __init__.py  extension.py
src/langchain_agentkit/extensions/persistence/: __init__.py  extension.py
src/langchain_agentkit/extensions/resilience/: types.py  (+2 more)
src/langchain_agentkit/middleware/: __init__.py  agents.py  filesystem.py  hitl.py  skills.py  tasks.py  teams.py  web_search.py
src/langchain_agentkit/permissions/: __init__.py  presets.py  types.py
src/langchain_agentkit/prompts/: agent_delegation.md  skills_system.md  task_management.md  team_coordination.md  web_search_system.md
src/langchain_agentkit/tools/: __init__.py  agent.py  filesystem.py  skill.py  task.py  team.py
src/langchain_agentkit/vfs/: __init__.py
src/langchain_skillkit/: __init__.py
tests/: test_agent.py  test_agent_kit.py  test_frontmatter.py  test_hitl_middleware.py  test_node.py  test_runtime.py  test_skill_kit.py  test_skill_registry.py  test_skills_middleware.py  test_task_tools.py  test_tasks_middleware.py  test_types.py  test_validate.py  test_web_search_middleware.py
tests/docker/: Dockerfile
tests/evals/: __init__.py  conftest.py  datasets.py  eval_runner.py  test_agent_evals.py  test_agent_extension_eval.py  test_agent_middleware_eval.py  test_compaction_evals.py  test_eval_runner.py  test_hitl_eval.py  test_prompt_behavior_evals.py  test_resilience_eval.py  test_skill_reference_eval.py  test_team_extension_eval.py  test_team_middleware_eval.py
tests/integration/: test_backend_protocol.py  test_bubblewrap_security.py  test_full_kit.py
tests/unit/: test_agent.py  test_agent_description.py  test_agent_kit.py  test_agent_like.py  test_agent_like_delegation.py  test_agent_like_integration.py  test_agent_like_protocol.py  test_backend.py  test_bubblewrap_backend.py  test_daytona_backend.py  test_execute_capture.py  test_extension_alignment.py  test_filesystem_tools.py  test_frontmatter.py  test_graph_builder.py  test_hitl_middleware.py  test_hook_composition.py  test_hooks.py  test_mirage_backend.py  test_model_metadata.py  test_prompt_composition.py  test_reminder_injection.py  test_reminders.py  test_runtime.py  test_skill_registry.py  test_skills_middleware.py  test_state_composition.py  test_state_mixins.py  test_streaming.py  test_task_tools.py  test_tasks_middleware.py  test_team_agent.py  test_tool_descriptions.py  test_types.py  test_validate.py  test_virtual_filesystem.py
tests/unit/extensions/: test_agents.py  test_capability_aware_prompts.py  test_filesystem.py  test_history.py  test_history_integration.py  test_hitl.py  test_persistence_integration.py  test_prompt_templates.py  test_resilience.py  test_skills.py  test_subagent_output.py  test_tasks.py  test_teams.py  test_turn_budget.py  test_web_search.py
tests/unit/middleware/: test_agents.py  test_filesystem.py  test_hitl.py  test_skills.py  test_tasks.py  test_teams.py  test_web_search.py
tests/unit/permissions/: test_types.py
tests/unit/tools/: test_agent_tools.py  test_filesystem.py  test_skill.py  test_task.py  test_task_proxy.py  test_team_schema_alignment.py  test_team_tools.py
tests/unit/vfs/: test_vfs.py
(+82 files in other folders)
