[project]
name = "langchain-agentkit"
version = "0.10.0"
description = "Composable middleware framework for LangGraph agents"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "langchain-core>=0.3",
    "langgraph>=0.4",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "langchain-openai>=0.3",
    "mypy>=1.10",
    "ruff>=0.8",
    "types-PyYAML>=6.0",
]
eval = [
    "agentevals>=0.0.9",
    "openevals>=0.1",
    "langchain-openai>=0.3",
]

[project.urls]
Homepage = "https://github.com/rsmdt/langchain-agentkit"
Repository = "https://github.com/rsmdt/langchain-agentkit"
Issues = "https://github.com/rsmdt/langchain-agentkit/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/langchain_agentkit"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
markers = [
    "eval: LLM integration evals (require API key, run with -m eval)",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "C90", "N", "UP", "PIE", "SIM", "TCH"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["langchain_agentkit"]
mypy_path = "src"
