[project]
name = "langchain-agentkit"
version = "0.27.0"
description = "Composable extension framework for LangGraph agents"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "langchain-core>=0.3",
    "langgraph>=0.4",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "poethepoet>=0.32",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-xdist>=3.5",
    "langchain-openai>=0.3",
    "mypy>=1.10",
    "ruff>=0.8",
    "types-PyYAML>=6.0",
    "daytona-sdk>=0.158",
]
eval = [
    "agentevals>=0.0.9",
    "openevals>=0.1",
    "langchain-openai>=0.3",
]
daytona = [
    "daytona-sdk>=0.158",
]

[project.urls]
Homepage = "https://github.com/rsmdt/langchain-agentkit"
Repository = "https://github.com/rsmdt/langchain-agentkit"
Issues = "https://github.com/rsmdt/langchain-agentkit/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/langchain_agentkit"]

[tool.poe.tasks]
test = "pytest tests/unit/ -q"
"test:unit" = "pytest tests/unit/ -q"
"test:integration" = "pytest tests/integration/ -v"
"test:evals" = "pytest tests/evals/ -m eval -v"
"test:all" = ["test:unit", "test:integration", "test:evals"]
lint = "ruff check src/ tests/ --fix"
format = "ruff format src/ tests/"
"format:check" = "ruff format --check src/ tests/"
typecheck = "mypy src/"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
markers = [
    "eval: LLM integration evals (require API key, run with -m eval)",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "C90", "N", "UP", "PIE", "SIM", "TCH"]

# Tool description constants carry text and legitimately
# exceed the 100-char line limit. They're data, not code.
[tool.ruff.lint.per-file-ignores]
"src/langchain_agentkit/extensions/*/tools/*.py" = ["E501"]
# model sees, so E501 is permitted here.
"src/langchain_agentkit/extensions/context_compaction/summarizer.py" = ["E501", "C901"]
# Bash-style argument tokenizer — the state machine is intentionally flat.
"src/langchain_agentkit/extensions/prompt_templates/parser.py" = ["C901"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["langchain_agentkit"]
mypy_path = "src"
